crates/ridge-parser/tests/fixtures/errors/p002_unexpected_in_block.rg
-- expect: P002
-- Trigger: `_` wildcard used as expression (not in pattern position).
fn f =
    _
